secure-cluster-networking/frontend-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-network-policy
  namespace: frontend
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress

  ingress:
  - {}   # allow all incoming traffic

  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: backend
    ports:
    - protocol: TCP
      port: 80

  - ports:
    - protocol: UDP
      port: 53   # allow DNS to anywhere
